# roofit

./: .gitignore  CMakeLists.txt  README.md  default.nix  settings-dev.cmake  setup.fish  setup.sh
.github/: README.md  documentation.md
.github/workflows/: blank.yml
src/: CMakeLists.txt
src/batchcompute/: CMakeLists.txt
src/batchcompute/src/: RooBatchCompute.cxx
src/codegen/: CMakeLists.txt  LinkDef.h
src/codegen/inc/RooFit/: CodegenImpl.h
src/codegen/src/: CodegenImpl.cxx
src/histfactory/: CMakeLists.txt
src/histfactory/config/: prepareHistFactory.bat
src/hs3/: CMakeLists.txt
src/jsoninterface/: CMakeLists.txt
src/jsoninterface/inc/RooFit/Detail/: JSONInterface.h
src/roofit/: CMakeLists.txt
src/roofit/src/: RooONNXFunction.cxx
src/roofit/test/: CMakeLists.txt  testRooONNXFunction.cxx
src/roofit/test/vectorisedPDFs/: CMakeLists.txt
src/roofitcore/: CMakeLists.txt
src/roofitcore/inc/: RooGlobalFunc.h  RooMinimizer.h  RooPlot.h
src/roofitcore/inc/RooFit/: Config.h
src/roofitcore/inc/RooFit/Detail/: MathFuncs.h
src/roofitcore/src/: RooAbsCachedPdf.cxx  RooAbsCollection.cxx  RooAbsPdf.cxx  RooAbsReal.cxx  RooEvaluatorWrapper.cxx  RooGlobalFunc.cxx  RooMinimizer.cxx  RooPlot.cxx
src/roofitcore/src/RooFit/: CodegenContext.cxx
src/roofitcore/test/: CMakeLists.txt  testRooMinimizer.cxx
src/roofitmore/: CMakeLists.txt
src/roostats/: CMakeLists.txt
src/roostats/inc/RooStats/: MCMCIntervalPlot.h
src/testsupport/: CMakeLists.txt
src/xroofit/: CMakeLists.txt
